--- a/youtube.html
+++ b/youtube.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            MY-Youtube.com Clone
+            Youtube.com Clone
         </title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
